--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - Staging
+env:
+  ITCH_USERNAME: GAGEUSERNAME
+  ITCH_GAME_ID: GAMENAMEHERELOL
+  WEBGL_BUILD_PATH: 'Build/WebGL/WebGL'
 jobs:
   Auto_Build:
     runs-on: ubuntu-latest
@@ -30,10 +34,19 @@ jobs:
       - name: Zip Web Build
         uses: vimtor/action-zip@v1
         with:
-          files: 'Build/WebGL/WebGL'
-          dest: 'Build/WebGL/WebGL.zip'
+          files: ${{ env.WEBGL_BUILD_PATH }}
+          dest: ${{ env.WEBGL_BUILD_PATH }}.zip
       - name: Upload WebGL Zip Artifact
         uses: actions/upload-artifact@v1
         with:
           name: webgl-artifact
-          path: 'Build/WebGL/WebGL.zip'
+          path: ${{ env.WEBGL_BUILD_PATH }}.zip
+      - name: Upload WebGL to Itch
+        uses: KikimoraGames/itch-publish@v0.0.3
+        with:
+          butlerApiKey: ${{ secrets.ITCH_API_KEY }}
+          gameData: ${{ env.WEBGL_BUILD_PATH }}.zip
+          itchUsername: ${{env.ITCH_USERNAME}}
+          itchGameId: ${{ env.ITCH_GAME_ID }}
+          buildChannel: 'webgl'
+          
