--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ crashlytics-build.properties
 
 UserSettings/*
 UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/*
+UserSettings/Layouts/default-2021.dwlt
