Updated CI/CD again

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Zip Web Build
         uses: vimtor/action-zip@v1
         with:
-          files: ${{ env.WEBGL_BUILD_PATH }}/WebGL
+          files: ../${{ env.WEBGL_BUILD_PATH }}/WebGL
           dest: ${{ env.WEBGL_BUILD_PATH }}.zip
       - name: Upload WebGL Zip Artifact
         uses: actions/upload-artifact@v1
