--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,10 @@ jobs:
           restore-keys: |
             Library-Fal2022VGDC-
             Library-
-      - name: Build WebGL
-        uses: game-ci/unity-builder@v2
+      - uses: finnp/create-file-action@master
         env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          projectPath: 
-          buildsPath: Build
-          targetPlatform: WebGL
+          FILE_NAME: ${{ env.WEBGL_BUILD_PATH }}/testFile.txt
+          FILE_DATA: "TEST FILE CONTENTS"
       - name: Zip Web Build
         uses: vimtor/action-zip@v1
         with:
