TEST CREATE DIR (REVERT LATER?)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
           restore-keys: |
             Library-Fal2022VGDC-
             Library-
+      - name: Create folder
+        run: |
+          mkdir -p ${{ env.WEBGL_BUILD_PATH }} && cp -R dist ${{ env.WEBGL_BUILD_PATH }}
+          ls ${{ env.WEBGL_BUILD_PATH }}
       - uses: finnp/create-file-action@master
         env:
           FILE_NAME: ${{ env.WEBGL_BUILD_PATH }}/testFile.txt
