--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,15 @@ jobs:
         run: |
           mkdir -p ${{ env.WEBGL_BUILD_PATH }}
           ls ${{ env.WEBGL_BUILD_PATH }}
-      - uses: finnp/create-file-action@master
-        env:
-          FILE_NAME: ${{ env.WEBGL_BUILD_PATH }}/testFile.txt
-          FILE_DATA: "TEST FILE CONTENTS"
+      - name: Build WebGL
+        uses: game-ci/unity-builder@v2
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          projectPath: 
+          buildsPath: Build
+          targetPlatform: WebGL
       - name: Zip Web Build
         uses: vimtor/action-zip@v1
         with:
