--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ UserSettings/*
 UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/*
 UserSettings/Layouts/default-2021.dwlt
+UserSettings/Layouts/default-2021.dwlt
+UserSettings/EditorUserSettings.asset
