Fix windows build automation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           projectPath: 
           buildsPath: Build
-          targetPlatform: Windows
+          targetPlatform: StandaloneWindows64
       - name: Zip Windows Build
         uses: vimtor/action-zip@v1
         with:
